# Gamepadla

./: .gitignore  Gamepadla.py  Gamepadla.spec  Gamepadla_1.0.1.spec  Gamepadla_1.0.3.spec  LICENSE.txt  Polling.py  Polling.spec  README.md  data.txt  pyproject.toml  test_results.txt
.github/workflows/: pypi.yml
